--- a/postbuild/Vagrantfile
+++ b/postbuild/Vagrantfile
@@ -4,8 +4,16 @@ Vagrant.configure(2) do |config|
     config.vm.box = "../package.box"
 
     config.vm.provider "virtualbox" do |vbox|
-      vbox.memory = 512
-      vbox.cpus = 2
+
+      cpus = `sysctl -n hw.ncpu`.to_i
+      # sysctl returns Bytes and we need to convert to MB
+      mem = `sysctl -n hw.memsize`.to_i / 1024 / 1024 / 4
+
+      vbox.memory = mem
+      vbox.cpus = cpus
     end
+
+    # default is true, but just to clarify that NOW we replace the key
+    config.ssh.insert_key = true
   end
 end
