--- a/postbuild/Vagrantfile
+++ b/postbuild/Vagrantfile
@@ -1,19 +1,16 @@
 Vagrant.configure(2) do |config|
-  config.vm.define "fedora" do |fedora|
+  config.vm.box = "../package.box"
 
-    config.vm.box = "../package.box"
+  config.vm.provider "virtualbox" do |vbox|
 
-    config.vm.provider "virtualbox" do |vbox|
+    cpus = `sysctl -n hw.ncpu`.to_i
+    # sysctl returns Bytes and we need to convert to MB
+    mem = `sysctl -n hw.memsize`.to_i / 1024 / 1024 / 4
 
-      cpus = `sysctl -n hw.ncpu`.to_i
-      # sysctl returns Bytes and we need to convert to MB
-      mem = `sysctl -n hw.memsize`.to_i / 1024 / 1024 / 4
-
-      vbox.memory = mem
-      vbox.cpus = cpus
-    end
-
-    # default is true, but just to clarify that NOW we replace the key
-    config.ssh.insert_key = true
+    vbox.memory = mem
+    vbox.cpus = cpus
   end
+
+  # https://github.com/mitchellh/vagrant/issues/5186#issuecomment-125538877
+  config.ssh.insert_key = false
 end
